Loading text in the spinner icon and Glass div behind it to avoid click or touch in other link

--- a/src/loading-bar.css
+++ b/src/loading-bar.css
@@ -1,4 +1,15 @@
 
+#loading-top-layer {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    top: 0;
+    left: 0;
+    opacity: 0.5;
+    background-color: grey;
+}
 /* Make clicks pass-through */
 #loading-bar,
 #loading-bar-spinner {
@@ -60,17 +71,18 @@
   display: block;
   position: fixed;
   z-index: 100;
-  top: 10px;
-  left: 10px;
+  top: 50%;
+  left: 50%;
 }
 
 #loading-bar-spinner .spinner-icon {
-  width: 14px;
-  height: 14px;
+  width: 24px;
+  height: 24px;
+
 
   border:  solid 2px transparent;
-  border-top-color:  #29d;
-  border-left-color: #29d;
+  border-top-color:  black;
+  border-left-color: black;
   border-radius: 10px;
 
   -webkit-animation: loading-bar-spinner 400ms linear infinite;
